<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunkMachine 2000</string>
    <string name="capimage">Capture New Image</string>
    <string name="browseimage">Choose image from gallery</string>
    <string name="primage">Process captured image</string>
    <string name="processing">Processing image..</string>
    <string name="getpath">Getting path..</string>
    <string name="picused">Using captured picture</string>
    <string name="settings">Settings</string>
    <string name="midilist">Funk list</string>
    <string name="about">About App</string>
    <string name="changeview">View formatted image</string>
    <string name="changeviewback">View warped photo</string>
    <string name="savemusic">Save and play</string>

</resources>